correction mineur d'alignement

--- a/public/williamCSS/SCSS/_interface/_dashAdminGestionMembre.scss
+++ b/public/williamCSS/SCSS/_interface/_dashAdminGestionMembre.scss
@@ -268,7 +268,9 @@
     }
 
     .relative.z-0.inline-flex.shadow-sm.rounded-md {
-        display: inline-block;
+        display: inline;
+        background-color: transparent;
+        box-shadow: none !important;
 
     }
 
